# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  liara.json  sqlx-data.json
.github/workflows/: audit.yml  deploy.yml  general.yml
.sqlx/: query-3ddf805178b8cd1476bed444a7fb966e5a257dac319b1f4acf73185e6e29848b.json  query-730599fdb14ed2360ec274baab81199c3596146766b790f92c22a3f985ad7802.json  query-9341e1139459e8f21883417b57ca8421442532b40de510bae5880a24476753ef.json  query-fff9ecf7788505005d3007aad31edab716887b96ed6ba44e1016ca0ae7391698.json
configuration/: base.yaml  production.yaml
migrations/: 20230519060840_create_subscriptions_table.sql  20230605124703_add_status_to_subscriptions.sql  20230605132939_make_status_not_null_in_subscriptions.sql  20230605134025_create_subscription_tokens_table.sql  20230619163442_create_users_table.sql  20230625132359_seed_user.sql  20230627141837_create_newsletter_issues_table.sql  20230627142108_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
