[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web-lab = "0.18"
serde_json = "1"
actix-session = { version = "0.10", features = ["redis-session-native-tls"] }
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
htmlescape = "0.3"
urlencoding = "2"
argon2 = { version = "0.4", features = ["std"] }
base64 = "0.21"
thiserror = "1"
anyhow = "1"
rand = { version = "0.8", features=["std_rng"] }
validator = "0.16"
unicode-segmentation = "1"
serde-aux = "4"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
tracing-log = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
config = "0.14"
actix-web = "4"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
serde_urlencoded = "0.7.1"
linkify = "0.9"
serde_json = "1"
wiremock = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
claims = "0.7"
once_cell = "1"
